--- a/pages/analysis.tex
+++ b/pages/analysis.tex
@@ -23,11 +23,11 @@ Počáteční značení $M_0$ = (\orderArrayNumbered{\mO}).
     \resizebox{\textwidth}{!}{%
         \begin{tabular}{p{1cm} p{8cm} p{6cm}}%
             \ & \ul{Strukturální}                    & \ul{Systémové} \\
-            \ & $Y_1^T$ - \orderArrayNumbered{\pI}   & $Y_1^T$ \cdot $M^0$ = 1 \\
-            \ & $Y_2^T$ - \orderArrayNumbered{\pII}  & $Y_2^T$ \cdot $M^0$ = 1 \\
-            \ & $Y_3^T$ - \orderArrayNumbered{\pIII} & $Y_3^T$ \cdot $M^0$ = 1 \\
-            \ & $Y_4^T$ - \orderArrayNumbered{\pIV}  & $Y_4^T$ \cdot $M^0$ = 1 \\
-            \ & $Y_5^T$ - \orderArrayNumbered{\pV}   & $Y_5^T$ \cdot $M^0$ = 3 \\
+            \ & $Y_1^T$ - \orderArrayNumbered{\pI}   & $Y_1^T \cdot M^0$ = 1 \\
+            \ & $Y_2^T$ - \orderArrayNumbered{\pII}  & $Y_2^T \cdot M^0$ = 1 \\
+            \ & $Y_3^T$ - \orderArrayNumbered{\pIII} & $Y_3^T \cdot M^0$ = 1 \\
+            \ & $Y_4^T$ - \orderArrayNumbered{\pIV}  & $Y_4^T \cdot M^0$ = 1 \\
+            \ & $Y_5^T$ - \orderArrayNumbered{\pV}   & $Y_5^T \cdot M^0$ = 3 \\
         \end{tabular}
     }
     \label{tab:p_invariants}
@@ -74,7 +74,7 @@ Za pomocí P a T invariantů můžeme o síti říci tyto vlastnosti:
 
 \begin{itemize}
     \item Síť je \textbf{konzervativní}, protože existuje p-invariant pokrývající všechny stavy. \\ $Y_6$ = \orderArrayNumbered{\pAll}
-    \item Síť je \textbf{\ut{striktně} repetiční} protože existuje t-invariant pokrývající všechny přechody. \\ $X_5$ = (\tAll)
+    \item Síť je \textbf{\underline{striktně} repetiční} protože existuje t-invariant pokrývající všechny přechody. \\ $X_5$ = (\tAll)
     \item Síť je \textbf{k-omezená} pro k = 3, kde k je maximální počet aut pohybující se v křižovatce.
     \item {
         Síť je \textbf{bezpečná} pouze pro vnitřní komponentu systému křižovatky.
