--- a/pages/design.tex
+++ b/pages/design.tex
@@ -14,7 +14,7 @@ Pro popis jednotlivých stavů a přechodu na \figref{fig:network} bude využita
     \centering
     \resizebox{0.50\textwidth}{!}{
         \begin{tabular}{c|c|c|c|c|c|c|c|c|c|c|c|c|}
-            \textbf{} & \textbf{$t_a$} & \textbf{$t_b$} & \textbf{$t_c$} & \textbf{$t_d$} & \textbf{$t_e$} & \textbf{$t_f$} & \textbf{$t_g$} & \textbf{$t_h$} & \textbf{$t_i$} & \textbf{$t_j$} & \textbf{$t_k$} & \textbf{$t_l$} \\
+            & \textbf{$t_a$} & \textbf{$t_b$} & \textbf{$t_c$} & \textbf{$t_d$} & \textbf{$t_e$} & \textbf{$t_f$} & \textbf{$t_g$} & \textbf{$t_h$} & \textbf{$t_i$} & \textbf{$t_j$} & \textbf{$t_k$} & \textbf{$t_l$} \\
             \hline
             %                  A      B      C      D      E      F      G      H      I      J      K      L
             \textbf{$p_1$}   & $-1$ & $+1$ & $  $ & $  $ & $  $ & $  $ & $  $ & $  $ & $  $ & $  $ & $+1$ & $-1$ \\
@@ -26,13 +26,13 @@ Pro popis jednotlivých stavů a přechodu na \figref{fig:network} bude využita
             \textbf{$p_7$}   & $  $ & $  $ & $  $ & $-1$ & $  $ & $  $ & $  $ & $  $ & $ 0$ & $+1$ & $  $ & $  $ \\
             \textbf{$p_8$}   & $  $ & $  $ & $  $ & $  $ & $  $ & $  $ & $ 0$ & $  $ & $  $ & $  $ & $-1$ & $+1$ \\
             \textbf{$p_9$}   & $  $ & $  $ & $  $ & $  $ & $  $ & $-1$ & $  $ & $+1$ & $  $ & $  $ & $ 0$ & $  $ \\
-            \textbf{$p_1_0$} & $  $ & $  $ & $-1$ & $  $ & $  $ & $+1$ & $  $ & $-1$ & $+1$ & $  $ & $  $ & $  $ \\
-            \textbf{$p_1_1$} & $  $ & $  $ & $+1$ & $  $ & $  $ & $  $ & $  $ & $-1$ & $ 0$ & $  $ & $  $ & $  $ \\
-            \textbf{$p_1_2$} & $  $ & $  $ & $-1$ & $  $ & $  $ & $+1$ & $  $ & $  $ & $  $ & $  $ & $  $ & $  $ \\
-            \textbf{$p_1_3$} & $  $ & $  $ & $+1$ & $ 0$ & $  $ & $  $ & $  $ & $  $ & $-1$ & $  $ & $  $ & $  $ \\
+            \textbf{$p_{10}$} & $  $ & $  $ & $-1$ & $  $ & $  $ & $+1$ & $  $ & $-1$ & $+1$ & $  $ & $  $ & $  $ \\
+            \textbf{$p_{11}$} & $  $ & $  $ & $+1$ & $  $ & $  $ & $  $ & $  $ & $-1$ & $ 0$ & $  $ & $  $ & $  $ \\
+            \textbf{$p_{12}$} & $  $ & $  $ & $-1$ & $  $ & $  $ & $+1$ & $  $ & $  $ & $  $ & $  $ & $  $ & $  $ \\
+            \textbf{$p_{13}$} & $  $ & $  $ & $+1$ & $ 0$ & $  $ & $  $ & $  $ & $  $ & $-1$ & $  $ & $  $ & $  $ \\
         \end{tabular}
     }
-    \caption{Matice incidence Petriho sítě. \footnotemark}
+    \caption{Matice incidence Petriho sítě. \protect\footnotemark[1]{Aaaa}}
     \label{tab:transitions}
 \end{table}
 
