--- a/pages/graph.tex
+++ b/pages/graph.tex
@@ -30,7 +30,7 @@ Pro graf dosažitelnosti jsem zvolil verzi sítě (viz \figref{fig:network}) k-o
 }
 
 \newcommand{\conn}[2]{%
-    \overset{#1}{\xrightarrow{\hspace{0.2cm}}}M#2
+    $\overset{#1}{\xrightarrow{\hspace{0.2cm}}}M#2$
 }
 
 \begin{table}[h!]
@@ -78,14 +78,14 @@ Jedinou změnou vlastnosti, je zamítnutí bezpečnosti sítě, která je podmí
     \label{fig:reachability_graph_k2}
 \end{figure}
 
-\begin{figure}[H!]
+\begin{figure}[h!]
     \centering
     \includegraphics[width=1.0\textwidth]{assets/graphK3_auto}
     \caption{Graf dosažitelnosti pro k-omezenou síť s třemi auty v křižovatce.}
     \label{fig:reachability_graph_k3}
 \end{figure}
 
-\begin{table}[H!]
+\begin{table}[h!]
     \renewcommand{\arraystretch}{1.3}
     \resizebox{\textwidth}{!}{%
         \begin{tabular}{P{10cm}|P{10cm}}
